# tensorrt_onnx_mnist

./: CMakeLists.txt  readme.MD  sampleOnnxMNIST.cpp
